--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -316,3 +316,14 @@ entrypoint = "./functions/create-payment-intent/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/create-payment-intent/*.html" ]
+
+[functions.create-payment-intent-v2]
+enabled = true
+verify_jwt = true
+import_map = "./functions/create-payment-intent-v2/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/create-payment-intent-v2/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/create-payment-intent-v2/*.html" ]
