--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.8",
     "dotenv": "^16.4.7",
     "p-queue": "^8.1.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4",
     "yocto-queue": "^1.2.0"
   },
