--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.8",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.5.0",
     "p-queue": "^8.1.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
